--- a/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -58,7 +58,7 @@
                 android:layout_marginStart="@dimen/margin"
                 android:layout_marginTop="@dimen/margin"
                 android:layout_marginEnd="@dimen/margin"
-                android:text="@string/how_was_hour_sleep" />
+                android:text="@{sleepTrackerViewModel.nightsString}" />
         </ScrollView>
 
         <!-- With data binding and LiveData, we can track the buttons' visibility states
@@ -75,7 +75,9 @@
             app:layout_constraintBaseline_toBaselineOf="@id/stop_button"
             app:layout_constraintEnd_toStartOf="@+id/stop_button"
             app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="@{() -> sleepTrackerViewModel.onStartTracking()}"
+            />
 
         <Button
             android:id="@+id/stop_button"
